fix tables and add api for guestuser servey
