# src/models/index.ts
@@ -7,3 +7,7 @@ export * from './log'
 export * from './user_login'
 
 export * from './user'
+
+export * from './guest_user'
+
+export * from './servey'
